# stepanov

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  MATRIX_ALGORITHMS_SUMMARY.md  MATRIX_STRUCTURES_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  RELEASE_NOTES.md  benchmark_all_structures  benchmark_final  benchmark_optimized  benchmark_real  benchmark_structures  mkdocs.yml  stepanov_whitepaper.aux  test_basic.cpp  test_bench  test_optimizations.cpp  test_revised  whitepaper_expansion_summary.md
benchmarks/: CMakeLists.txt  PERFORMANCE_VALIDATION_REPORT.md  README.md  bench_eigen  bench_eigen_comparison.cpp  bench_fundamentals.cpp  bench_realistic  bench_realistic.cpp  benchmark_all_structures.cpp  benchmark_core_algorithms.cpp  benchmark_data_structures.cpp  benchmark_final.cpp  benchmark_matrix_operations.cpp  benchmark_optimized.cpp  benchmark_real.cpp  benchmark_simd.cpp  benchmark_structures.cpp  test_revised.cpp
docs/post/2019-03-peasant-stepanov/tests/: CMakeLists.txt
lib/alea/: CMakeLists.txt
lib/alea/include/: alea.hpp
lib/alea/tests/: test_alea.cpp
lib/alga/: CMakeLists.txt
lib/alga/include/alga/: alga.hpp  algebraic_operators.hpp  combinators.hpp  concepts.hpp  lc_alpha.hpp  monadic.hpp  numeric_parsers.hpp  parse_error.hpp  similarity.hpp  utf8_alpha.hpp
lib/alga/tests/: test_alga.cpp
lib/elementa/: CMakeLists.txt
lib/elementa/include/: elementa.hpp
lib/elementa/tests/: test_elementa.cpp
lib/gradator/: CMakeLists.txt
lib/gradator/examples/: optimization.cpp
lib/gradator/include/: gradator.hpp
lib/gradator/tests/: test_gradator.cpp
lib/limes/: CMakeLists.txt
lib/limes/cmake/: limesConfig.cmake.in
lib/limes/examples/: CMakeLists.txt  demo.cpp
lib/limes/include/limes/: fwd.hpp  limes.hpp
lib/limes/include/limes/algorithms/: algorithms.hpp
lib/limes/include/limes/expr/: .gitkeep  (+10 more)
lib/limes/tests/: CMakeLists.txt  basic_tests.cpp  test_accumulators.cpp  test_concepts.cpp  test_expr.cpp  test_expr_domain.cpp  test_integrators.cpp  test_quadrature.cpp  test_result.cpp
lib/mutatio/: CMakeLists.txt
lib/mutatio/include/: mutatio.hpp
lib/mutatio/include/mutatio/: logarithmic.hpp  modular.hpp  odds_ratio.hpp  quaternion.hpp  stern_brocot.hpp  tropical.hpp
lib/mutatio/tests/: test_mutatio.cpp
lib/polynomials/: CMakeLists.txt
lib/polynomials/examples/: CMakeLists.txt  basic.cpp  euclidean_gcd.cpp
lib/polynomials/include/polynomials/: concepts.hpp  evaluation.hpp
lib/polynomials/tests/: CMakeLists.txt
post/: CMakeLists.txt  README.md
post/2019-03-peasant-stepanov/: index.md
post/2019-03-peasant-stepanov/examples/: big_int_simple.hpp  bool_matrix.hpp  mat2.hpp  mod_int.hpp  perm.hpp  recurrence.hpp  tree_graft.hpp
post/2019-03-peasant-stepanov/tests/: test_peasant.cpp
post/2019-06-modular-stepanov/: index.md  mod.hpp  test_mod.cpp
post/2019-09-miller-rabin-stepanov/: index.md
post/2019-12-intervals-stepanov/: index.md  intervals.hpp  test_intervals.cpp
post/2020-02-rational-stepanov/: index.md  rational.hpp  test_rational.cpp
post/2020-07-polynomials-stepanov/: index.md  test_arithmetic.cpp  test_evaluation.cpp
post/2021-03-elementa-stepanov/: index.md  test_elementa.cpp
post/2021-09-dual-stepanov/: index.md  test_higher_order.cpp  test_numerical.cpp
post/2021-09-dual-stepanov/dual/: dual.hpp
post/2022-04-finite-diff-stepanov/: index.md  test_finite_diff.cpp
post/2023-01-autodiff-stepanov/: gradator.hpp  index.md
post/2023-08-integration-stepanov/: index.md
post/2024-02-type-erasure-stepanov/: any_vector.hpp  index.md
post/2025-01-differentiation-stepanov/: index.md
post/2026-01-18-synthesis-stepanov/: index.md
post/2026-01-19-duality-stepanov/: index.md
post/2026-03-accumulator-stepanov/: accumulator.hpp  index.md  test_accumulator.cpp
post/2026-03-free-algebra-stepanov/: free_algebra.hpp  index.md  test_free_algebra.cpp
post/2026-03-homomorphism-stepanov/: homomorphism.hpp  index.md  test_homomorphism.cpp
post/2026-03-lattice-stepanov/: index.md  lattice.hpp  test_lattice.cpp
post/2026-03-semiring-stepanov/: index.md  semiring.hpp  test_semiring.cpp
post/2026-05-codecs-functors-stepanov/: codecs_functors.hpp  index.md  test_codecs_functors.cpp
post/2026-05-prefix-free-stepanov/: index.md  prefix_free.hpp  test_prefix_free.cpp
tests/: CMakeLists.txt  CMakeLists.txt.old  Makefile.benchmark  README.md  test_unified_matrix.cpp
tests/benchmarks/: CMakeLists.txt  bench_simple.cpp  test_benchmark.cpp
tests/examples/: test_advanced.cpp  test_advanced_features.cpp  test_simple_demo.cpp
tests/integration/: CMakeLists.txt  test_algebraic_structures.cpp  test_all_components.cpp  test_allocators.cpp  test_bitmap.cpp  test_boolean.cpp  test_compression.cpp  test_compression_advanced.cpp  test_compression_simple.cpp  test_generic_math.cpp  test_geometry.cpp  test_innovations.cpp  test_innovative.cpp  test_integration.cpp  test_integrations.cpp  test_iterators_ranges.cpp  test_iterators_ranges_simple.cpp  test_math_integration.cpp  test_matrix.cpp  test_new_algorithms.cpp  test_numeric_types.cpp  test_numerical_algorithms.cpp  test_optimization_simple.cpp  test_polynomial_systems.cpp  test_random_enhanced.cpp  test_showcase.cpp  test_simple_math.cpp  test_single_allocator.cpp  test_slab.cpp  test_string_algorithms.cpp  test_synchronization.cpp  test_template_instantiation.cpp
tests/optimization/: CMakeLists.txt  Makefile  test_all.cpp  test_golden_section.cpp  test_gradient_descent.cpp  test_integration.cpp  test_newton.cpp  test_root_finding.cpp  test_simulated_annealing.cpp
tests/unit/: CMakeLists.txt  test_bounded_nat.cpp  test_builtin_adaptors.cpp  test_cache_oblivious.cpp  test_concepts.cpp  test_continued_fraction.cpp  test_expmod.cpp  test_fenwick_tree.cpp  test_fft.cpp  test_gcd.cpp  test_graph.cpp  test_groups.cpp  test_interval.cpp  test_math.cpp  test_math_tools.cpp  test_matrix_algorithms.cpp  test_matrix_expressions.cpp  test_mod.cpp  test_padic.cpp  test_polynomial.cpp  test_primality.cpp  test_sparse_matrix.cpp  test_type_erasure.cpp
(+255 files in other folders)
